44
================

26/09/20 Consistent keyboard handling for alphanumber widget #914
25/09/20 Email address books #179
25/09/20 Add HomeCheckedDate person wordkey
24/09/20 Use pickup address and brought in by when lost->shelter matching
23/09/20 Support good with kids over 5/12 when csv importing
22/09/20 Completion actions not appearing under audit slider #909
22/09/20 AnimalLogsTYPE wordkey/token #912
22/09/20 Remove signature placeholders on document sign preview #910
11/09/20 Advanced find for pickup location/reason for entry #683
11/09/20 Missing view person permission breaks staff rota
07/09/20 Apply DST to service calls #899
07/09/20 Merge additional fields during csv import #894
07/09/20 Prompt to clone animal #907
07/09/20 Prevent additional fields overriding base values #904
07/09/20 Stop control keys dirtying form, fix autofocus delay #906
06/09/20 Stop csvimport/merge duplicates creating blank lookups #900
05/09/20 Fix for subtle bug with trailing commas on units
04/09/20 Complete Portuguese translation (Nuno Leal)
31/08/20 Extra shelter view filters for color, species/breed+color
27/08/20 Fix fractional weight display on documents
26/08/20 Incorporate DST into locales and option to auto adjust #899
24/08/20 Prevent double-submit of online forms #897
23/08/20 Consistent handling of breed1 and colour fields for online forms
17/08/20 Online form person deduplication should not require address
17/08/20 Include diary for in email notifications
17/08/20 Reduce cache time of json/xml_adoptable_animals to 10 minutes
15/08/20 Fix adoptapet mappings for Budgie and Chinchilla
13/08/20 Option to include submission in form confirmation email #872
11/08/20 Image watermarking (Thanks Connor9220) #881
05/08/20 Options->Reports for emailing empty reports
04/08/20 $CURRENT_DATE+/-DAY$ report tokens
02/08/20 Merging animals and people should not update log.LastChangedBy
01/08/20 Update owner when active movement person is edited