@@ -647,6 +647,10 @@ def handler(post, path, remoteip, referer, querystring):
         if formid == 0:
             raise asm3.utils.ASMError("method sign_document requires a valid formid")
         if post["sig"] == "":
+            m = asm3.media.get_media_by_id(dbo, formid)
+            if m is None: raise asm3.utils.ASMError("invalid link")
+            token = asm3.utils.md5_hash_hex("%s%s" % (m.ID, m.LINKID))
+            if token != post["token"]: raise asm3.utils.ASMError("invalid token")
             return set_cached_response(cache_key, account, "text/html", 2, 2, sign_document_page(dbo, formid, post["email"]))
         else:
             asm3.media.sign_document(dbo, "service", formid, post["sig"], post["signdate"])
